# iceberg-dataproc-batch

./: README.md  pyproject.toml  setup.sh
src/: main.py
