[tool.poetry]
name = "iceberg-dataproc-batch"
version = "0.1.0"
description = ""
authors = ["dannylesnik <danny.lesnik@yahoo.com>"]
readme = "README.md"
exclude = ["src/main*.py"]
packages = [
    { include = "src/**/*.py" },
]
[tool.poetry.dependencies]
python = "^3.9"
codetiming = "1.4.0"

[tool.poetry.dev-dependencies]
pyspark ="3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

